Fix hover and alignment

--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ body{
     background-color: white;
     width: 600px;
     height: 100px;
-    margin-right: 1em;
     display:flex;
     justify-content: space-evenly;
     align-items: center;
